# betting

./: README.md  docker-compose.yaml
bet-maker/: .env  Dockerfile  README.md  main.py  pyproject.toml
bet-maker/src/: amqp.py  api.py  db.py  models.py
line-provider/: Dockerfile  README.md  main.py  pyproject.toml
line-provider/src/: amqp.py  api.py  db.py  models.py
